fix: button positioning improved on mobile, slightly worsened on desktop

--- a/controls/app/app.css
+++ b/controls/app/app.css
@@ -421,3 +421,12 @@ i {
   background: #2196F3;
   cursor: pointer; /* Cursor on hover */
 }
+
+button {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
